First pass at adding tls client cert support

--- a/ffufrc.example
+++ b/ffufrc.example
@@ -5,6 +5,8 @@
     cookies = [
         "cookiename=cookievalue"
     ]
+    cert = ""
+    cert_key = ""
     data = "post=data&key=value"
     followredirects = false
     headers = [
